test/conformance/chainsaw/verify-images/clusterpolicy/standard/notary-image-verification-secret-from-policy/chainsaw-step-06-apply-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-secret-pod
  namespace: test-verify-images
spec:
  containers:
  - image: ghcr.io/kyverno/test-verify-image-private:signed
    name: test-secret
