test/conformance/chainsaw/verify-images/clusterpolicy/standard/notary-image-verification-secret-from-policy/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: secret-in-policy
spec:
  failurePolicy: Fail
  rules:
  - context:
    - configMap:
        name: keys
        namespace: test-verify-images
      name: keys
    match:
      any:
      - resources:
          kinds:
          - Pod
    name: verify-signature-notary
    verifyImages:
    - attestors:
      - count: 1
        entries:
        - certificates:
            cert: '{{ keys.data.certificate }}'
      imageReferences:
      - ghcr.io/kyverno/test-verify-image-private*
      imageRegistryCredentials:
        secrets:
        - regcred
      type: Notary
      failureAction: Enforce
  webhookTimeoutSeconds: 30
