test/conformance/chainsaw/verify-images/clusterpolicy/standard/notary-image-verification-secret-from-policy/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: notary-image-verification-secret-from-policy
spec:
  concurrent: false
  timeouts:
    delete: 2m
  steps:
  - name: step-01
    try:
    - apply:
        file: chainsaw-step-01-apply-1.yaml
    - apply:
        file: chainsaw-step-01-apply-2.yaml
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: secret-in-policy
  - name: step-03
    try:
    - script:
        content: "if kubectl apply -f 06-pod.yaml\nthen \n  echo \"Tested failed.
          Pod was created when it shouldn't have been.\"\n  exit 1 \nelse \n  echo
          \"Test succeeded. Pod was not created as intended.\"\n  exit 0\nfi\n"
  - name: step-04
    try:
    - script:
        content: |
          kubectl create secret docker-registry regcred --docker-username=kyverno --docker-password=$GITHUB_TOKEN --docker-server=ghcr.io -n kyverno
  - name: step-05
    try:
    - apply:
        file: chainsaw-step-05-apply-1.yaml
  - name: step-06
    try:
    - apply:
        file: chainsaw-step-06-apply-1.yaml
  - name: step-07
    try:
    - assert:
        file: chainsaw-step-07-assert-1.yaml
  - name: step-08
    try:
    - command:
        args:
        - delete
        - secret
        - regcred
        - -n
        - kyverno
        entrypoint: kubectl
